Final Updates based on user authentication

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "type": "commonjs",
   "devDependencies": {
     "@playwright/test": "^1.55.0",
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "dotenv": "^17.2.1"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.5.1"
   }
 }
