--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -50,7 +50,7 @@ jobs:
       
     - name: Upload test results
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: playwright-report
         path: |
@@ -58,3 +58,4 @@ jobs:
           test-results/
           logs/
         retention-days: 30
+        compression-level: 6 # New feature in v4 for better compression
