Dockerized playwright tests

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -12,6 +12,11 @@ jobs:
   FIX-E2E-TESTS:
     timeout-minutes: 30
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.38.0-jammy
+      # Using the official Microsoft Playwright Docker container
+      options: --user pwuser
+    
     # Add concurrency to prevent multiple workflows running simultaneously
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
@@ -20,24 +25,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        cache: 'npm'
-        
-    - name: Cache Playwright browsers
+    - name: Cache dependencies
       uses: actions/cache@v3
       with:
-        path: ~/.cache/ms-playwright
-        key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
-        
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    
     - name: Install dependencies
-      run: npm ci
-      
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps chromium
-      # Only installing Chromium to save time and resources
+      run: |
+        # Install dependencies using clean install
+        npm ci
+        # No need to install browsers as they are pre-installed in the container
       
     - name: Create env file
       run: |
