Add JAVA_HOME for allure report to run

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -51,9 +51,16 @@ jobs:
     - name: Run Playwright tests
       run: npx playwright test
       
+    - name: Install Java in container
+      if: always()
+      run: |
+        apt-get update
+        apt-get install -y openjdk-17-jre-headless
+        
     - name: Generate Allure Report
       if: always()
       run: |
+        export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
         npx allure generate allure-results --clean
         
     - name: Upload test results
