--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -81,6 +81,9 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./allure-report
+        personal_token: ${{ secrets.GH_PAGES_TOKEN }}
+        publish_dir: allure-report
         publish_branch: gh-pages
+        force_orphan: true
+        full_commit_message: 'Deploy Allure report to GitHub Pages'
+        enable_jekyll: false
