--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -8,6 +8,7 @@ on:
       - '**.js'
       - 'package*.json'
       - '.github/workflows/**'
+      - 'Dockerfile'
   pull_request:
     branches: [ master ]
     paths:
@@ -15,7 +16,7 @@ on:
       - '**.js'
       - 'package*.json'
       - '.github/workflows/**'
-  # Allow manual trigger
+      - 'Dockerfile'
   workflow_dispatch:
 
 jobs:
@@ -23,58 +24,38 @@ jobs:
     timeout-minutes: 30
     runs-on: ubuntu-latest
     
-    # Prevent redundant workflow runs
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event.pull_request.number || github.sha }}
       cancel-in-progress: true
     
-    container:
-      image: mcr.microsoft.com/playwright:v1.55.0-jammy
-      options: --ipc=host --shm-size=2gb
-    
     steps:
-    - name: Cache Docker image
-      uses: actions/cache@v3
-      with:
-        path: /tmp/docker-save
-        key: docker-${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
-        restore-keys: |
-          docker-${{ runner.os }}-playwright-
-    
-    - name: Load cached Docker image
-      run: |
-        if [ -f /tmp/docker-save/playwright.tar ]; then
-          docker load < /tmp/docker-save/playwright.tar
-        else
-          mkdir -p /tmp/docker-save
-          docker pull mcr.microsoft.com/playwright:v1.55.0-jammy
-          docker save mcr.microsoft.com/playwright:v1.55.0-jammy > /tmp/docker-save/playwright.tar
-        fi
-    
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 1
-    
-    - name: Setup Node.js and cache
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: package-lock.json
-    
-    - name: Install dependencies
-      run: npm ci --prefer-offline --no-audit
       
-    - name: Setup environment variables
+    - name: Create env file
       run: |
         cat << EOF > .env
         FIXA_USERNAME=${{ secrets.FIXA_USERNAME }}
         FIXA_PASSWORD=${{ secrets.FIXA_PASSWORD }}
         EOF
-      
-    - name: Run Playwright tests
-      run: npx playwright test --workers=2
+        
+    - name: Setup test directories
+      run: |
+        mkdir -p playwright-report
+        mkdir -p test-results
+        mkdir -p logs
+        chmod -R 777 playwright-report test-results logs
+        
+    - name: Run tests in Docker
+      run: |
+        docker run --rm \
+          --ipc=host \
+          --shm-size=2gb \
+          -v ${{ github.workspace }}:/app \
+          -w /app \
+          --network host \
+          mcr.microsoft.com/playwright:v1.55.0-jammy \
+          /bin/bash -c "npm ci && npx playwright test --workers=2"
       env:
         CI: 'true'
         NODE_ENV: 'test'
