--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -9,6 +9,7 @@ on:
       - 'package*.json'
       - '.github/workflows/**'
       - 'Dockerfile'
+      - 'e2e-tests.yml'
   pull_request:
     branches: [ master ]
     paths:
