--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -46,6 +46,24 @@ jobs:
         mkdir -p test-results
         mkdir -p logs
         chmod -R 777 playwright-report test-results logs
+
+    # Cache Docker layers
+    - name: Cache Docker layers
+      uses: actions/cache@v4
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile', '**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    # Set up Docker Buildx for caching
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    # Pull and cache the Playwright image
+    - name: Pull Playwright Docker image
+      run: |
+        docker pull mcr.microsoft.com/playwright:v1.55.0-jammy
         
     - name: Run tests in Docker
       run: |
