--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -47,23 +47,15 @@ jobs:
         mkdir -p logs
         chmod -R 777 playwright-report test-results logs
 
-    # Cache Docker layers
-    - name: Cache Docker layers
-      uses: actions/cache@v4
+    # Use dedicated Docker cache action
+    - name: Cache Docker images
+      uses: ScribeMD/docker-cache@0.5.0
       with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile', '**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+        key: docker-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
 
-    # Set up Docker Buildx for caching
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    # Pull and cache the Playwright image
+    # Pull the Playwright image (will be cached automatically)
     - name: Pull Playwright Docker image
-      run: |
-        docker pull mcr.microsoft.com/playwright:v1.55.0-jammy
+      run: docker pull mcr.microsoft.com/playwright:v1.55.0-jammy
         
     - name: Run tests in Docker
       run: |
